corrected the alignment of textarea in the contact section

--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ section {
 }
 
 .msg textarea {
-  height: 192px;
+  height: 189px;
 }
 .msg .btn1 {
   margin-top: 1rem;
